--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "yandex practicum project",
   "main": "index.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel": "^2.0.0-rc.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/parcel src/index.html --port 3000"
   },
   "repository": {
     "type": "git",
