--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "yandex practicum project",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "handlebars": "^4.7.7"
+  },
   "devDependencies": {
     "autoprefixer": "^10.3.6",
     "parcel": "^2.0.0-rc.0",
