--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/parcel src/index.html --port 3000"
+    "start": "./node_modules/.bin/parcel index.html --port 3000"
   },
   "repository": {
     "type": "git",
