--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "yandex practicum project",
   "main": "index.js",
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "normalize": "^0.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.6",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0-nightly.850",
     "postcss": "^8.3.8",
     "postcss-cli": "^9.0.1",
+    "postcss-modules": "^4.2.2",
     "postcss-nested": "^5.0.6",
     "postcss-sorting": "^6.0.0",
-    "precss": "^4.0.0"
+    "posthtml-parser": "^0.10.1",
+    "precss": "^4.0.0",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
