--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "posthtml-parser": "^0.10.1",
     "precss": "^4.0.0",
     "prettier": "2.4.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-scss": "^4.0.0",
     "typescript": "^4.4.3"
   },
   "scripts": {
     "dev": "./node_modules/.bin/parcel serve ./static/**/*.html --port 3000 --no-cache",
     "build": "./node_modules/.bin/parcel build ./static/**/*.html",
     "start": "node server.js",
-    "lint": "eslint \"src/**/*.ts\" --fix"
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "lint:css": "stylelint **/*.css **/*.scss"
   },
   "repository": {
     "type": "git",
