--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "normalize": "^0.3.1"
   },
   "devDependencies": {
+    "@babel/register": "^7.16.0",
     "@parcel/transformer-sass": "2.0.0-nightly.852",
+    "@types/chai": "^4.2.22",
+    "@types/jsdom": "^16.2.13",
+    "@types/mocha": "^9.0.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.3.6",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
+    "jsdom": "^18.1.0",
+    "mocha": "^9.1.3",
     "parcel": "^2.0.0-nightly.850",
     "postcss": "^8.3.8",
     "postcss-cli": "^9.0.1",
@@ -33,6 +41,7 @@
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^23.0.0",
     "stylelint-scss": "^4.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.3"
   },
   "scripts": {
@@ -40,7 +49,8 @@
     "build": "./node_modules/.bin/parcel build ./static/**/*.html",
     "start": "npm install && npm run build && node server.js",
     "lint": "eslint \"src/**/*.ts\" --fix",
-    "lint:css": "stylelint **/*.css **/*.scss"
+    "lint:css": "stylelint **/*.css **/*.scss",
+    "test": "./node_modules/.bin/mocha --require ts-node/register"
   },
   "repository": {
     "type": "git",
