--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.5.0",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
     "postcss": "^8.3.8",
