--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
@@ -50,11 +51,12 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.4.3",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "scripts": {
-    "dev": "./node_modules/.bin/parcel serve ./static/**/*.html --port 3000 --no-cache",
-    "build": "./node_modules/.bin/webpack",
+    "dev": "./node_modules/.bin/webpack serve --mode development",
+    "build": "./node_modules/.bin/webpack --mode production",
     "start": "npm install && npm run build && node server.js",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "lint:css": "stylelint **/*.css **/*.scss",
