--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
     "postcss": "^8.3.8",
@@ -77,5 +78,10 @@
     "entities": "./src/entities",
     "features": "./src/features",
     "pages": "./src/pages"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint:all"
+    }
   }
 }
