--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^4.3.8",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
     "postcss": "^8.3.8",
@@ -81,7 +81,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint:all"
+      "pre-commit": "npm run lint \"src/**/*.ts\" --fix"
     }
   }
 }
