chore: change husky pre commit hook

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint \"src/**/*.ts\" --fix"
+      "pre-commit": "npm run lint"
     }
   }
 }
