--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "handlebars": "^4.7.7",
-    "normalize": "^0.3.1"
+    "normalize": "^0.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/register": "^7.16.0",
-    "@parcel/transformer-sass": "2.0.0-nightly.852",
     "@types/chai": "^4.2.22",
     "@types/jsdom": "^16.2.13",
     "@types/mocha": "^9.0.0",
@@ -21,32 +21,43 @@
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.3.6",
     "chai": "^4.3.4",
+    "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^4.3.8",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
-    "parcel": "^2.0.0-nightly.850",
     "postcss": "^8.3.8",
     "postcss-cli": "^9.0.1",
+    "postcss-loader": "^6.2.1",
     "postcss-modules": "^4.2.2",
     "postcss-nested": "^5.0.6",
     "postcss-sorting": "^6.0.0",
     "posthtml-parser": "^0.10.1",
     "precss": "^4.0.0",
     "prettier": "2.4.1",
+    "sass": "^1.43.5",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.0.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^23.0.0",
     "stylelint-scss": "^4.0.0",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "scripts": {
-    "dev": "./node_modules/.bin/parcel serve ./static/**/*.html --port 3000 --no-cache",
-    "build": "./node_modules/.bin/parcel build ./static/**/*.html",
+    "dev": "./node_modules/.bin/webpack serve --mode development",
+    "build": "./node_modules/.bin/webpack --mode production",
     "start": "npm install && npm run build && node server.js",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "lint:css": "stylelint **/*.css **/*.scss",
@@ -67,5 +78,10 @@
     "entities": "./src/entities",
     "features": "./src/features",
     "pages": "./src/pages"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
